Wed Nov  1 18:59:48 CET 2006 (tk)
---------------------------------
  * libclamav: add support for self-extracting MS Cabinet archives
	       Thanks to Christoph for a nice bunch of test files.

Wed Nov  1 17:03:54 CET 2006 (tk)
---------------------------------
  * libclamav: minor clamav.h (and related) cleanup

Mon Oct 30 19:29:36 CET 2006 (tk)
---------------------------------
  * 0.90RC2 (released with JS and PST code removed)

Mon Oct 30 14:20:40 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added support for daily.inc/daily.info (patch from TK)

Mon Oct 30 12:24:09 CET 2006 (tk)
---------------------------------
  * libclamav/readdb.c: cl_stat() functions now check .info files

Sun Oct 29 20:12:26 CET 2006 (tk)
---------------------------------
  * shared/misc.c: freshdbdir now supports daily.inc

Sun Oct 29 19:45:07 CET 2006 (tk)
---------------------------------
  * clamd: change stack size at the right place (closes bug#103)
	   Patch from Jonathan Chen <jon+clamav*spock.org>

Sun Oct 29 19:28:20 CET 2006 (tk)
---------------------------------
  * configure: make user/group check more precise (closes bug#41)

Sun Oct 29 19:22:00 CET 2006 (tk)
---------------------------------
  * clamd/session.c: VERSION now prints details for daily.inc (closes bug#107)

Sun Oct 29 16:33:01 CET 2006 (tk)
---------------------------------
  * shared/cdiff.c: make cdiff_apply() compatible with old zlib versions
		    (closes bug#76), patch from Ian Abbott <abbotti*mev.co.uk>

Sun Oct 29 16:10:08 CET 2006 (tk)
---------------------------------
  * clamd/others.c: fix compilation error under w32 (closes bug#68)

Sun Oct 29 15:36:21 CET 2006 (tk)
---------------------------------
  * clamscan, clamdscan: new option --copy, patch from aCaB

Sun Oct 29 15:06:21 CET 2006 (tk)
---------------------------------
  * clamd/thrmgr.c: fix possible memory leaks and improve handling of memory
		    allocation errors (closes bug#75)
		    Patch by Mark Pizzolato
